# cFE

.github/PULL_REQUEST_TEMPLATE/: comment_documentation_change.md  fsw_code_change.md  workflows_change.md
.github/workflows/: code-coverage-eds.yml  code-coverage.yml
cmake/: arch_build.cmake
cmake/sample_defs/: cfe_perfids.h  example_platform_cfg.h  targets.cmake
cmake/sample_defs/eds/: cfe-topicids.xml
docs/: cFE_FunctionalRequirements.csv
docs/src/: cfe_ta.dox
docs/src/mnem_maps/: cfe_ta_cmd_mnem_map  cfe_ta_tlm_mnem_map
modules/cfe_assert/src/: cfe_assert_io.c
modules/cfe_testcase/src/: es_cds_test.c  es_info_test.c  es_resource_id_test.c  es_task_test.c  fs_header_test.c  fs_util_test.c  sb_pipe_mang_test.c  sb_sendrecv_test.c
modules/config/fsw/src/: cfe_config_get.c  cfe_config_init.c
modules/config/tool/: config_ids_dynamic.cmake
modules/config/ut-coverage/: test_cfe_config.c
modules/core_api/fsw/inc/: cfe_sb.h  cfe_sb_api_typedefs.h
modules/core_api/ut-stubs/src/: cfe_sb_stubs.c
modules/fs/config/: default_cfe_fs_filedef.h
modules/fs/eds/: cfe_fs.xml
modules/sb/ut-coverage/: sb_UT.c  sb_UT.h
modules/ta/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
modules/ta/config/: default_cfe_ta_fcncode_values.h  default_cfe_ta_interface_cfg_values.h  default_cfe_ta_internal_cfg_values.h  default_cfe_ta_mission_cfg.h  default_cfe_ta_msg.h  default_cfe_ta_msgdefs.h  default_cfe_ta_msgid_values.h  default_cfe_ta_msgids.h  default_cfe_ta_msgstruct.h  default_cfe_ta_platform_cfg.h  default_cfe_ta_topicid_values.h  eds_cfe_ta_fcncode_values.h  eds_cfe_ta_interface_cfg_values.h  eds_cfe_ta_msgdefs.h  eds_cfe_ta_msgstruct.h  eds_cfe_ta_topicid_values.h
modules/ta/docs/: cfe_ta.dox
modules/ta/eds/: cfe_ta.xml
modules/ta/examples/: sample_cfe_ta_cpuaffinity.c
modules/ta/fsw/inc/: cfe_ta_eventids.h  cfe_ta_fcncodes.h  cfe_ta_interface_cfg.h  cfe_ta_internal_cfg.h  cfe_ta_tasklist.h  cfe_ta_topicids.h
modules/ta/fsw/src/: cfe_ta_dispatch.c  cfe_ta_dispatch.h  cfe_ta_eds_dispatch.c  cfe_ta_module_all.h  cfe_ta_objtab.c  cfe_ta_task.c  cfe_ta_task.h
modules/ta/ut-coverage/: CMakeLists.txt  ta_UT.c  ta_UT.h  ta_UT_task.c  ta_ut_default_dispatch.c  ta_ut_eds_dispatch.c  ta_ut_helpers.c  ta_ut_helpers.h
(+5 files in other folders)
